--- a/data_visualization.html
+++ b/data_visualization.html
@@ -21,6 +21,13 @@
 .link:hover {
   stroke-opacity: .5;
 }
+
+.faded {
+  opacity: 0.1;
+}
+.focused {
+  opacity: 1;
+}
 </style>
 
 
@@ -28,8 +35,8 @@
 
 // set the dimensions and margins of the graph
 var margin = {top: 10, right: 10, bottom: 10, left: 10},
-    width = 1080,
-    height = 2000;
+    width = 2500,
+    height = 7000;
 
 // append the svg object to the body of the page
 var svg = d3.select("#my_dataviz").append("svg")
@@ -49,7 +56,7 @@ var sankey = d3.sankey()
     .size([width, height]);
 
 // load the data
-d3.json("my_sample.json", function(error, graph) {
+d3.json("my_sample copy.json", function(error, graph) {
 
   // Constructs a new Sankey generator with the default settings.
   sankey
@@ -60,37 +67,44 @@ d3.json("my_sample.json", function(error, graph) {
 
   // add in the links
   var link = svg.append("g")
+
     .selectAll(".link")
     .data(graph.links)
     .enter()
     .append("path")
-      .attr("class", "link")
-      .attr("d", sankey.link() )
-      .style("stroke-width", function(d) { return Math.max(1, d.dy); })
-      .sort(function(a, b) { return b.dy - a.dy; });
+    .attr("class", "link")
+    .attr("d", sankey.link() )
+    .style("stroke-width", function(d) { return Math.max(1, d.dy); })
+    .sort(function(a, b) { return b.dy - a.dy; });
 
   // add in the nodes
   var node = svg.append("g")
+
     .selectAll(".node")
     .data(graph.nodes)
     .enter().append("g")
-      .attr("class", "node")
-      .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
-      .call(d3.drag()
-        .subject(function(d) { return d; })
-        .on("start", function() { this.parentNode.appendChild(this); })
-        .on("drag", dragmove));
+    .attr("class", "node")
+    .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
+    .call(d3.drag()
+    .subject(function(d) { return d; })
+    .on("start", function() { this.parentNode.appendChild(this); })
+    .on("drag", dragmove))
+
+    .attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; })
+    // Add the click event listener
+    .on("click", function(d) { focusNode(this); });
 
   // add the rectangles for the nodes
   node
     .append("rect")
-      .attr("height", function(d) { return d.dy; })
-      .attr("width", sankey.nodeWidth())
-      .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
-      .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
+    .attr("height", function(d) { return d.dy; })
+    .attr("width", sankey.nodeWidth())
+    .style("fill", function(d) { return d.color = color(d.name.replace(/ .*/, "")); })
+    .style("stroke", function(d) { return d3.rgb(d.color).darker(2); })
+    
     // Add hover text
     .append("title")
-      .text(function(d) { return d.name + "\n" + "There is " + d.value + " stuff in this node"; });
+    .text(function(d) { return d.name + "\n" + "There is " + d.value + " stuff in this node"; });
 
   // add in the title for the nodes
     node
@@ -100,8 +114,10 @@ d3.json("my_sample.json", function(error, graph) {
         .attr("dy", ".35em")
         .attr("text-anchor", "end")
         .attr("transform", null)
-        .text(function(d) { return d.name; })
-      .filter(function(d) { return d.x < width / 2; })
+        
+        .text(function(d) { return d.name + " " + d.value; })  // name of node
+
+        .filter(function(d) { return d.x < width / 2; })
         .attr("x", 6 + sankey.nodeWidth())
         .attr("text-anchor", "start");
 
@@ -116,6 +132,29 @@ d3.json("my_sample.json", function(error, graph) {
                  ) + ")");
     sankey.relayout();
     link.attr("d", sankey.link() );
+  }
+
+  function focusNode(d) {
+    // Check if the node is already focused
+    var isFocused = d3.select(d).classed("focused");
+    // Reset all nodes and links to unfocused state
+    d3.selectAll(".node, .link").classed("faded", false).classed("focused", false);
+
+    if (!isFocused) {
+      // If the node is not focused, fade all elements
+      d3.selectAll(".node, .link").classed("faded", true);
+      // Highlight the clicked node and its connected links
+      d3.select(d).classed("focused", true).classed("faded", false);
+      d3.selectAll(".link")
+        .filter(function(link) { return link.source === d.__data__ || link.target === d.__data__; })
+        .classed("faded", false)
+        .each(function(link) {
+          // Also highlight the connected nodes
+          d3.selectAll(".node").filter(function(node) {
+            return node === link.source || node === link.target;
+          }).classed("focused", true).classed("faded", false);
+        });
+    }
   }
 
 });
